2007-01-14  Johannes Schmid <jhs@gnome.org>

	* configure.in
	* po/LINGUAS:
	Applied http://live.gnome.org/GnomeGoals/PoLinguas

	* tagmanager/c.c:
	Patch from Massimo Cora' to hopefully fix #395362

	* plugins/project-wizard/templates/*:

	Fixed and tested all project-wizards. Deactivated mkfile project because
	it was totally broken and I don't see any real use for it.
	Applied http://live.gnome.org/GnomeGoals/PoLinguas to all projects

2007-01-14  Naba Kumar  <naba@gnome.org>

	* NEWS: Updated for release.
	
	* libanjuta/anjuta-launcher.c: Fixed a possible timer leak.
	
	* libanjuta/interfaces/libanjuta.idl,
	plugins/editor/text_editor_cbs.c,
	plugins/editor/text_editor.c: Added 'changed' signal in IAnjutaEditor
	interface and implemented it for scintilla.
	
	* plugins/editor/text-editor.c: Fixed highlighing issues when
	used with indicators (particularly when the file is just opened).
	Fixes bug #377477 – when debugging, scintilla editor grays out all
	lines before current line.
	
	* plugins/build-basic-autotools/build-basic-autotools.[ch]:
	Maintain a separate list of indicated edtitors for separate contexts.
	Fixes bug 342717 – Build errors redisplayed AFTER a successful build.
	
2007-01-12 Sebastien Granjoux <seb.sfo@free.fr>

	Reviewed by Naba Kumar  <naba@gnome.org>:
	* plugins/debug-manager/plugin.c:
	Bug fix: breakpoints cannot be added after stopping the debugger

2007-01-13  Naba Kumar  <naba@gnome.org>

	* NEWS: Updated for release.

2007-01-12  Johannes Schmid <jhs@gnome.org>

	* plugins/project-wizard/anjuta-plugin/src/Makefile.am.tpl:
	* plugins/project-wizard/cpp/src/Makefile.am.tpl:
	* plugins/project-wizard/gcj/src/Makefile.am.tpl:
	* plugins/project-wizard/gnome/src/Makefile.am.tpl:
	* plugins/project-wizard/gtk/src/Makefile.am.tpl:
	* plugins/project-wizard/gtkmm/src/Makefile.am.tpl:
	* plugins/project-wizard/terminal/src/Makefile.am.tpl:
	* plugins/project-wizard/wxwin/src/Makefile.am.tpl:
	* plugins/project-wizard/xlib/src/Makefile.am.tpl: