@@ -1,7 +1,7 @@
 AC_PREREQ(2.53)
 AC_INIT(src/Makefile.am)
 
-ANJUTA_VERSION=2.0.3
+ANJUTA_VERSION=2.1.0
 
 GLIB_REQUIRED=2.8.0
 GOBJECT_REQUIRED=2.8.0
@@ -26,7 +26,7 @@ PANGO_REQUIRED=1.1.1
 PCRE_REQUIRED=3.9
 LIBDEVHELP_REQUIRED=0.11
 GDL_REQUIRED=0.7.0
-GNOMEBUILD_REQUIRED=0.1.3
+GNOMEBUILD_REQUIRED=0.1.4
 LIBGLADEUI_REQUIRED=3.0.2
 LIBGRAPHVIZ_REQUIRED=1.0
 NEON_REQUIRED=0.24.5
